<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.dealsitem.DealItemFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/tvPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvTittle"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="$8.00" />

        <TextView
            android:id="@+id/tvReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reg: "
            android:textColor="@color/gray_color"
            android:textSize="24sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tvRegPrice"
            app:layout_constraintEnd_toStartOf="@+id/tvRegPrice"
            app:layout_constraintTop_toTopOf="@+id/tvRegPrice" />

        <TextView
            android:id="@+id/tvRegPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/gray_color"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/tvTittle"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="$20.00" />

        <TextView
            android:id="@+id/tvTittle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/tvDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Junior's Boyfriend V Tee" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:ellipsize="end"
            android:maxLines="6"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tvAddToList"
            app:layout_constraintEnd_toEndOf="@+id/tvTittle"
            app:layout_constraintStart_toStartOf="@+id/tvTittle"
            tools:text="This product is super product which is avaialble in discounted price as per market standards. Available in different colors as well" />

        <TextView
            android:id="@+id/tvAddToList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/light_gray_color"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/add_to_list"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvAddToCart"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvAddToCart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/add_to_cart"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvAddToList" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>