<resources>
    <string name="app_name">TargetCaseStudy</string>

    <!-- Credit card validation strings. You do not need to make changes here. -->
    <string name="credit_card_payment_title">Credit Card Payment</string>
    <string name="credit_card_payment_subtitle">Note: you do NOT need to enter real data</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="credit_card_number_hint">Credit card number</string>

    <string name="loading">Loading...</string>
    <string name="or">or</string>
    <string name="ship">ship</string>

    <string name="err_dialog_title">Something went Wrong</string>
    <string name="add_to_list">add to list</string>
    <string name="add_to_cart">add to cart</string>

    <string name="feature_under_development">Feature is under development</string>
</resources>
