<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_home"
    app:startDestination="@id/fragment_deals">

    <fragment
        android:id="@+id/fragment_deals"
        android:name="com.target.targetcasestudy.ui.deals.DealListFragment"
        android:label="Deals"
        tools:layout="@layout/fragment_deal_list" >
        <action
            android:id="@+id/action_fragment_deals_to_fragment_deal_item"
            app:destination="@id/fragment_deal_item" />
    </fragment>

    <fragment
        android:id="@+id/fragment_deal_item"
        android:name="com.target.targetcasestudy.ui.dealsitem.DealItemFragment"
        android:label="Deal Item"
        tools:layout="@layout/fragment_deal_item">

        <argument
            android:name="id"
            app:argType="integer"
            android:defaultValue="-1" />

    </fragment>

</navigation>